--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,13 +6,42 @@
 
 plugins {
     id 'api.test.framework.java-application-conventions'
+    id 'java'
 }
-
+repositories {
+    mavenCentral()
+}
 dependencies {
-    implementation 'org.apache.commons:commons-text'
+    testImplementation 'io.cucumber:cucumber-java:6.8.1'
+    testImplementation 'io.cucumber:cucumber-junit:6.8.1'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.7.0'
+
 }
 
 application {
     // Define the main class for the application.
     mainClass = 'api.test.framework.app.App'
+}
+
+configurations {
+    cucumberRuntime {
+        extendsFrom testImplementation
+    }
+}
+test {
+    useJUnitPlatform()
+    testLogging {
+        events 'passed', 'skipped', 'failed'
+    }
+}
+
+task cucumber() {
+    dependsOn 'test'
+    doLast {
+        javaexec {
+            mainClass = "io.cucumber.core.cli.Main"
+            classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
+            //args = ['--plugin', 'pretty', '--glue', 'api.test.framework.definitions', 'src/test/resources']
+        }
+    }
 }
